# ai-command-center

./: .gitignore  EXCEPTION_HANDLING.md  PROJECT_STRUCTURE.md  ROLE_MANAGEMENT.md  UI_DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/components/chat/: chat-interface.tsx
src/components/layout/: header.tsx  main-layout.tsx  sidebar.tsx
